Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-03-13 Kimmo
 PATCH: [ 1447927 ] Add Help Search to menu, open correct manual location
  Src: DirView.cpp DirView.h MainFrm.cpp MainFrm.h Merge.rc MergeEditView.cpp
   MergeEditView.h resource.h
  Src/Languages/*: Merge*.rc

2006-03-11 Kimmo
 PATCH: [ 1447506 ] Don't include splash bitmap to lang files
  Src/Languages/*: Merge*.rc
 Remove Catalan localized splash screen
  Src/Languages/Catalan/res removed files: splash1.bmp WinMergeSplash.psd
 BUG: [ 1447851 ] Not enough space for version info in new splash screen
  Src: Splash.cpp
 PaTCH: [ 1445377 ] WinMerge Logos (72 DPI)
  Submitted by Alexander Skinner
  Add new folder Docs/Logos
  New Docs/Logos files: readme.txt WinMerge_logo_24bit.png
   WinMerge_logo_shadow_24bit.png WinMerge_logo_shadow_trans.tif
   WinMerge_logo_trans.gif
 Change Splashscreen text to according to Dean's wish
  Src: Splash.cpp
 Add Alexander Skinner to contributors list
  Docs/Users: Contributors.txt
 PATCH: [ 1447348 ] Build language files to Build directory
  Src/Languages: BuildDll.bat
 PATCH: [ 1447806 ] Use JPEG splashscreen
  Src: Merge.dsp Merge.rc resource.h Splash.cpp Splash.h
  Src/Common new files: Picture.cpp Picture.h
  Src/res new file: splash.jpg
  Src/res deleted file: splash1.bmp
  Src/Languages/*: Merge*.rc

2006-03-11 Takashi
 BUG:  [ 1441389 ] Comparing root directory - mysterious
  Src: DiffWrapper.cpp

2006-03-11 Perry
 PATCH:  [ 1447539 ] Add explanatory comment to CCrystalTextBuffer::MoveLine
  Src/editlib: ccrystaltextbuffer.cpp
 PATCH: [ 1447547 ] Add more comments to CMergeDoc::PrimeTextBuffers
  Src: MergeDoc.cpp

2006-03-10 Kimmo
 Remove unneeded splash image (Splash2.bmp) as noted in Patch item #1441392
  Src/res removed file: Splash2.bmp

2006-03-10 Perry
 PATCH: [ 1445434 ] SyntaxColors scrambling reg values
  Src: SyntaxColors.cpp
  